# infinitum

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: differential-equation.py  differential_equation.py  main.py  mathquill_component.py  symbolic_plotter.py  testing.py
src/mathquill_component_frontend/: index.html
tests/: test_differential_equation.py
