[project]
name = "elara"
version = "0.1.0"
description = ""
authors = [
    {name = "David Yang",email = "yangd12@rpi.edu"}
]
license = {text = "mit"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "streamlit-mathlive (>=0.0.3,<0.0.4)",
    "antlr4-python3-runtime (==4.11.0)",
    "sympy (==1.14.0)",
    "elara-symbolic @ git+https://codeberg.org/elaraproject/elara-symbolic"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
