[project]
name = "elara-symbolic-ui" # may be changed to 'infinitum' in future
version = "0.1.0"
description = "Web UI for elara-symbolic (Project Elara's toolkit for physics and engineering computations)"
authors = [
	{name = "Jacob Thomas",email = "jstevethom@gmail.com"},
	{name = "Jacky Song",email = "jacky.song.elara@gmail.com"},
    {name = "David Yang",email = "yangd12@rpi.edu"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.55.0,<2.0.0)",
    "streamlit-mathlive (>=0.0.3,<0.0.4)",
    "antlr4-python3-runtime (==4.11.0)",
    "sympy (==1.14.0)",
    "elara-symbolic @ git+https://codeberg.org/elaraproject/elara-symbolic@76be147c5c",
    "polars (>=1.39.3,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
